--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
   "dependencies": {
     "express": "^4.13.4",
     "gulp": "^3.9.1",
-    "gulp-nodemon": "^2.0.6",
-    "vhost": "^3.0.2"
+    "gulp-nodemon": "^2.0.6"
   }
 }
